<resources>
    <string name="app_name">Myapp4</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world">Hello world</string>
    <string name="log_in">Log in</string>
    <string name="nic">NIC</string>
    <string name="log_in_1">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="login_nic">National Identity Card</string>
    <string name="forget_password">forget Password</string>
    <string name="login_password">Password</string>
    <string name="school_van_management_system">School Van Management System</string>
    <string name="login">Login</string>
    <string name="smart_van">SMART-VAN</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="image1">TODO</string>
    <string name="reg_sign_up">SIGN UP</string>
    <string name="parent_registration">Parent Registration</string>
    <string name="van_owner_company_registration">Van Owner / Company Registration</string>
    <string name="image2">TODO</string>
    <string name="image3">TODO</string>
    <string name="register_now">Register Now…</string>
    <string name="van_owner_regpart">VAN OWNER/COMPANY REGISTRATION</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="next">Next</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="national_identity_card">National Identity Card</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="telephone_number_2">Telephone Number(2)</string>
    <string name="telephone_number_1">Telephone Number(1)</string>
    <string name="address_home_company">Address(Home/Company)</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="parent_details">PARENT DETAILS</string>
    <string name="child_details">CHILD DETAILS</string>
    <string name="manage_vehicle_details">MANAGE VEHICLE DETAILS</string>
    <string name="driver_payment">DRIVER PAYMENT</string>
    <string name="report">REPORT</string>
    <string name="manage_driver_details">MANAGE DRIVER DETAILS</string>
    <string name="password">Password</string>
    <string name="licence_number">Licence Number</string>
    <string name="city">City</string>
    <string name="registered_date">Registered Date</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="salary">Salary</string>
    <string name="title_activity_parent_dashboard">ParentDashboard</string>
    <string name="title_activity_driver_dashboard">DriverDashboard</string>
    <string name="parent_dashboard">parent dashboard</string>
    <string name="driver_dashboard">Driver Dashboard</string>
    <string name="title_activity_interface">Interface</string>
    <string name="title_activity_van_owner_part1">VanOwnerPart1</string>
    <string name="title_activity_parent_part1">ParentPart1</string>
    <string name="title_activity_van_owner_part2">VanOwnerPart2</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="driver_registration">DRIVER REGISTRATION</string>
    <string name="driver_licence_number">Driver Licence Number</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="owner_nic">Owner NIC</string>
    <string name="driver_submit">submit</string>
    <string name="title_activity_driver_reg">DriverReg</string>
    <string name="driver_mobile_number">mobile number</string>

</resources>