<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        style="@style/tilte"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="31dp"
        android:text="@string/smart_van" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="75dp"
        android:text="@string/school_van_management_system" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="87dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/image1"
        app:srcCompat="@drawable/smartvan" />

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="499dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="32dp"
        android:background="#fff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView4"
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:text="@string/register_now" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="118dp"
            android:layout_height="98dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/vanownerregicon"
            android:contentDescription="@string/image2" />

        <Button
            android:id="@+id/vanOwnerRegBtn"
            android:layout_width="216dp"
            android:layout_height="68dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="#e3f2fd "
            android:textStyle="bold"
            android:text="@string/van_owner_company_registration" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="112dp"
            android:layout_height="94dp"
            app:srcCompat="@drawable/parentreg"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image3" />

        <Button
            android:id="@+id/parentRegBtn"
            android:layout_width="216dp"
            android:layout_height="68dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="#e3f2fd  "
            android:textStyle="bold"
            android:text="@string/parent_registration" />


    </LinearLayout>


    <!--<TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="212dp"
        android:text="@string/hello_world"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="94dp"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
</RelativeLayout>